--- a/style.css
+++ b/style.css
@@ -1,3 +1,80 @@
+
+.banner {
+    
+    width: 100%;
+    height: 100vh;  
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+
+}
+
+
+
+.banner .slider {
+    position: absolute;
+    width: 350px;
+    height: 250px;
+    top: 10%;
+    left: calc(40% - 100px);
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+    animation: autoRun 20s linear infinite;
+    z-index: 2;
+}
+
+@keyframes autoRun {
+    from{
+        transform: perspective(1000px) rotateX(-16deg) rotateY(0deg);
+    }to{
+        transform: perspective(1000px) rotateX(-15deg) rotateY(360deg);
+    }
+}
+
+.banner .slider .item {
+
+    position: absolute;
+    inset: 0 0 0 0;
+    transform: 
+    rotateY(calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg))
+    translateZ(350px);
+}
+.banner .slider .item img {
+    display: grid;
+    width: 100%;;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.banner .content {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform:translateX(-50%);
+    width: min(1400px, 100vw);
+    height: max-content;
+    padding-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+
+}  
+
+.banner .content .model {
+    background-image:url(Hand.png);
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-size: auto 130%;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+/* From here it is da box */
 *
 {
     margin: 0;
@@ -17,9 +94,10 @@ body
 
 ul 
 {
-   
+    
     position: relative;
-    transform: skewY(-15deg);
+    transform: skewY(-25deg);
+    z-index: 99;
 }
 
 ul li
@@ -27,7 +105,7 @@ ul li
     padding-right: 30%;
     position: relative;
     list-style: none;
-    width: 200px;
+    width: 150px;
     background: #35383e;
     padding: 15px;
     z-index: var(--i);
@@ -92,7 +170,11 @@ ul li:hover a
     color: #fff;
 }
 
-ul li:last-child::after
-{
-    box-shadow: -120px 120px 20px rgba(0, 0, 0, 0.25)
+.Valikko {
+    position: absolute;
+    bottom: 50px;
+    left: 100px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
