--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
     z-index: 2;
 }
 
+
+
 @keyframes autoRun {
     from{
         transform: perspective(1000px) rotateX(-16deg) rotateY(0deg);
@@ -74,6 +76,40 @@
     background-repeat: no-repeat;
     background-position: top center;
 }
+
+@media (max-width: 800px){
+    .banner .slider {
+
+    }
+    .banner .slider{
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        top: 10%;
+        left: calc(40% - 20px);
+        transform-style: preserve-3d;
+        transform: perspective(1000px);
+        animation: autoRun 20s linear infinite;
+        z-index: 2;
+        
+        
+    }
+    .banner .slider .item {
+
+    
+    }
+    .banner .slider .item {
+
+        position: absolute;
+        inset: 0 0 0 0;
+        transform: 
+        rotateY(calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg))
+        translateZ(120px);
+    }
+    
+}
+
+
 /* From here it is da box */
 *
 {
@@ -96,7 +132,8 @@ ul
 {
     
     position: relative;
-    transform: skewY(-25deg);
+    transform: skewY(-20deg);
+    
     z-index: 99;
 }
 
@@ -105,8 +142,8 @@ ul li
     padding-right: 30%;
     position: relative;
     list-style: none;
-    width: 150px;
-    background: #35383e;
+    width: 130px;
+    background: #0d0e0f; /* front*/
     padding: 15px;
     z-index: var(--i);
     transition: 0.5s;
@@ -122,10 +159,10 @@ ul li::before
     content: '';
     position: absolute;
     top: 0;
-    left: -40px;
-    width: 40px;
+    left: -30px;
+    width: 30px;
     height: 100%;
-    background: #2e3133;
+    background: #1d1f20;
     transform-origin: right;
     transform: skewY(45deg);
     transition: 0.5s;
@@ -140,11 +177,11 @@ ul li::after
 {
     content: '';
     position: absolute;
-    top: -40px;
+    top: -30px;
     left: 0;
     width: 100%;
-    height: 40px;
-    background: #35383e;
+    height: 30px;
+    background: #1d1f20;
     transform-origin: bottom;
     transform: skewX(45deg);
     transition: 0.5s;
@@ -161,6 +198,7 @@ ul li a
     color: #999;
     display: block;
     text-transform: uppercase;
+    
     letter-spacing: 0.05;
     transition: 0.5s;
 }
@@ -171,10 +209,45 @@ ul li:hover a
 }
 
 .Valikko {
+    
     position: absolute;
     bottom: 50px;
-    left: 100px;
+    left: 50px;
     margin: 0;
     padding: 0;
     list-style: none;
+    
 }
+
+
+@media (max-width: 800px){
+    ul li {
+
+    }
+    ul li
+{
+    padding-right: 30%;
+    position: relative;
+    list-style: none;
+    width: 90px;
+    background: #0d0e0f; /* front*/
+    padding: 3px;
+    z-index: var(--i);
+    transition: 0.5s;
+}
+.Valikko {
+
+}
+.Valikko {
+    
+    position: absolute;
+    bottom: 30px;
+    left: 50px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    
+}
+    
+
+ }
